fixed register error message being too close to input line above

--- a/react_lab/react_projects/fitness-homie/src/Dashboard/UserProfile/userprofile.css
+++ b/react_lab/react_projects/fitness-homie/src/Dashboard/UserProfile/userprofile.css
@@ -122,6 +122,9 @@
         margin: 0;
         line-height: 1.5em;
     }
+    .journal-item h4 {
+        font-size: 1.5em;
+    }
 
     .user-profile-item:first-child {
         flex: 1 1 100%;
