--- a/react_lab/react_projects/fitness-homie/src/Register/Register.css
+++ b/react_lab/react_projects/fitness-homie/src/Register/Register.css
@@ -72,6 +72,10 @@ input {
     color:red;   
 }
 
+.form-group input {
+    margin-bottom: -0.5em;
+}
+
 @media only screen and (max-width: 400px) {
 
     form {
